Fix bug mit overflow margin: =

--- a/world/main.css
+++ b/world/main.css
@@ -1,6 +1,6 @@
 
 body{
-    overflow: hidden;
+    margin: 0;
 }
 
 #map{
